--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -3,7 +3,7 @@
 @import "shortcodes/handwritten";
 @import "shortcodes/rotate";
 
-{{/*  REFACTOR rotate  */}}
+// {{/*  REFACTOR rotate  */}}
 
 
 // RAINBOW
