time_offset explanation

--- a/layouts/shortcodes/text_shimmer.html
+++ b/layouts/shortcodes/text_shimmer.html
@@ -4,6 +4,7 @@ Makes a shimmer/bright animation with position and scale animations.
 Arguments:
 text = (string) Text with the effect
 time = (float) Animation time. Default: 2.4 (s)
+time_offset = (float) Offset on which the animation starts (useful for making asynchronous effects). Default: 0.0 (s)
 delay = (float) Delay time for each char. Default: 0.05 (s)
 blur = (int) Default: 12 (px)
 color1 = Bright color
