added .scss because I preffer it like that

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,5 +1,7 @@
 /* custom.css */
-@import "fonts";
+@import "fonts.scss";
+@import "shortcodes.scss";
+
 // *{
 // 	transition: background-color .5s;
 // }
