--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -1,7 +1,7 @@
-@import "shortcodes/glitch";
-@import "shortcodes/shimmer";
-@import "shortcodes/handwritten";
-@import "shortcodes/rotate";
+@import "shortcodes/glitch.scss";
+@import "shortcodes/shimmer.scss";
+@import "shortcodes/handwritten.scss";
+@import "shortcodes/rotate.scss";
 
 // {{/*  REFACTOR rotate  */}}
 
