--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -2,6 +2,8 @@
 @import "shortcodes/shimmer.scss";
 @import "shortcodes/handwritten.scss";
 @import "shortcodes/rotate.scss";
+@import "shortcodes/spoiler.scss";
+// @import "shortcodes/misc_effects.scss";
 
 // {{/*  REFACTOR rotate  */}}
 
