header class bloom-shadow

--- a/layouts/partials/profile_resume.html
+++ b/layouts/partials/profile_resume.html
@@ -13,7 +13,7 @@
     {{/*  <img id="szk_pfp" src="{{ .Site.profile_picture }}">  */}}
     {{/*  <img id="szk_pfp" src="{{ .Site.Params.profile_picture }}">  */}}
     {{ if .Title }}
-      <h2>{{ .Title }}</h2>
+      <h2 class="bloom-shadow">{{ .Title }}</h2>
     {{ end }}
     {{/*  <a href="{{ 'about' | relURL }}">  */}}
     {{/*  <a href={{< ref "about.md" >}}> <h1>VAS O NO VAS</h1></a>  */}}
