--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -3,6 +3,7 @@
 @import "shortcodes/handwritten.scss";
 @import "shortcodes/rotate.scss";
 @import "shortcodes/spoiler.scss";
+@import "shortcodes/text_strong.scss";
 // @import "shortcodes/misc_effects.scss";
 
 // {{/*  REFACTOR rotate  */}}
