--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -714,6 +714,15 @@ blockquote {
 		padding: 15px 20px;
 		box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
+& strong {
+			transition: all 1s;
+		}
+		&:hover strong {
+			transition: all .5s;
+			@extend .bloom-shadow;
+			// font-weight: bolder !important; // bolder is the default value for <strong>
+			font-weight: revert !important; // This works! But only for modern browsers.
+		}
 		&:hover cite{
 			color: var(--text-2);
 			transition: all .2s;
