category-tag extends .article-tag

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1646,6 +1646,13 @@ nav.categories ul li a{
 // 	float: left;
 // }
 
+.category-tag{
+	@extend .article-tag;
+	color: var(--text-2);
+	// font-weight: 600;
+	font-weight: bold;
+}
+
 .article-tag{
 	position: relative;
 	border-radius: 999999px;
