--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -11,4 +11,5 @@
     {{ end }}  */}}
     {{/*  </section>  */}}
   {{ partial "featured-galleries.html" . }}
+  {{ partial "featured-articles.html" . }}
 {{ end }}
