// REFACTOR .consolas-font-font

--- a/layouts/shortcodes/text_glitch.html
+++ b/layouts/shortcodes/text_glitch.html
@@ -41,7 +41,7 @@ randomness = (float) Displacement randomness. Default: 0.0
 
 {{ $css_class := "glitch" }}
 {{ if eq $font 1 }}
-	{{ $css_class = printf "%s %s" $css_class "consolas" }}
+	{{ $css_class = printf "%s %s" $css_class "consolas-font" }}
 {{ else if eq $font 2 }}
 	{{ $css_class = printf "%s %s" $css_class "pixel-font" }}
 {{ end }}
