--- a/layouts/shortcodes/text_handwritten.html
+++ b/layouts/shortcodes/text_handwritten.html
@@ -46,7 +46,7 @@ time_variation = (float) random value for the time. Default: 0.0
 
 {{ $top_css_class := ""}}
 {{ if eq $font 1 }}
-	{{ $top_css_class = printf "%s %s" $top_css_class "consolas" }}
+	{{ $top_css_class = printf "%s %s" $top_css_class "consolas-font" }}
 {{ else if eq $font 2 }}
 	{{ $top_css_class = printf "%s %s" $top_css_class "pixel-font" }}
 {{ else if eq $font 3 }}
