--- a/layouts/shortcodes/text_shimmer.html
+++ b/layouts/shortcodes/text_shimmer.html
@@ -39,7 +39,7 @@ random_scale_min = (float) Scale added to the random (useful if you want to avoi
 {{ $font := .Get "font" | default 0 }}
 {{ $top_css_class := "shimmer"}}
 {{ if eq $font 1 }}
-	{{ $top_css_class = printf "%s %s" $top_css_class "consolas" }}
+	{{ $top_css_class = printf "%s %s" $top_css_class "consolas-font" }}
 {{ else if eq $font 2 }}
 	{{ $top_css_class = printf "%s %s" $top_css_class "pixel-font" }}
 {{ else if eq $font 3 }}
