--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -2562,3 +2562,22 @@ mark {
 	  grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
   }
+
+video{
+	// box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+	// box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+	box-shadow: rgb(0, 0, 0) 0px 2px 8px 0px, rgba(0, 0, 0, 0.658) 0px 2px 6px 2px;
+
+}
+
+.youtube-video {
+	@extend video;
+	height: 100%;
+	width: 100%;
+
+	// box-shadow: rgb(0, 0, 0) 0px 2px 8px 0px, rgba(0, 0, 0, 0.658) 0px 2px 6px 2px;
+	& iframe{
+		height: 100%;
+		width: 100%;
+	}
+}
