--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -4,6 +4,7 @@
 @import "shortcodes/rotate.scss";
 @import "shortcodes/spoiler.scss";
 @import "shortcodes/text_strong.scss";
+@import "shortcodes/text_boxes.scss";
 // @import "shortcodes/misc_effects.scss";
 
 // {{/*  REFACTOR rotate  */}}
