--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -4,6 +4,7 @@ $soft_color: change-color($main_color, $saturation: 60%, $lightness: 40%);
 
 
 @import "fonts.scss";
+@import "utility-classes.scss";
 @import "shortcodes.scss";
 
 // *{
