--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -7,6 +7,7 @@ $soft_color: change-color($main_color, $saturation: 60%, $lightness: 40%);
 @import "utility-classes.scss";
 @import "shortcodes.scss";
 @import "effects.scss";
+@import "articles.scss";
 
 // *{
 // 	transition: background-color .5s;
@@ -2511,57 +2512,6 @@ mark {
 	}
 	to {
 	  text-shadow: 0 0 20px #fff, 0 0 30px var(--hover-color), 0 0 40px var(--hover-color), 0 0 50px var(--hover-color), 0 0 60px var(--hover-color), 0 0 70px var(--hover-color), 0 0 80px var(--hover-color);
-	}
-  }
-
-
-.featured-article{
-	// width: 70%;
-	// display: block;
-	// text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--hover-color), 0 0 40px var(--hover-color), 0 0 50px var(--hover-color), 0 0 60px var(--hover-color), 0 0 70px var(--hover-color);
-	border: 2px 10px solid $main_color;
-	padding: .5em 1em;
-	// background-color: pink;
-	border-radius: 3px 3px 3px 3px;
-	-webkit-border-radius: 3px 3px 3px 3px;
-	-moz-border-radius: 3px 3px 3px 3px;
-	border-left: 5px solid $soft_color;
-
-	box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-
-	& time{
-		color: var(--text-2);
-	}
-	&:hover{
-		border-left: 5px solid $main_color;
-		// @extend .bloom-shadow;
-		// color: $main_color;
-	}
-}
-
-.featured-articles-container{
-	& h2{
-		font-size: 2em;
-	}
-	& h3{
-		font-size: 1.2em;
-		font-weight: bold;
-	}
-}
-
-.featured-articles-container section{
-	display: grid;
-	grid-template-columns: repeat(1, minmax(0, 1fr));
-	gap: 2rem 1.5rem;
-	max-width: 1280px;
-  
-	@media (min-width: 640px) {
-	  grid-template-columns: repeat(2, minmax(0, 1fr));
-	  row-gap: 3rem;
-	}
-  
-	@media (min-width: 1024px) {
-	  grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
   }
 
