--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -2530,3 +2530,13 @@ video{
 		width: 100%;
 	}
 }
+
+.youtube-video-container{
+	width: 100%;
+	height: fit-content;
+	// padding: 20px 0px;
+	margin: 10px 0px;
+	// box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	// box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+	box-shadow: rgba(0, 0, 0, 0.19) 0px 6px 20px, rgba(0, 0, 0, 0.73) 0px 3px 6px;
+}
